   * various improvements to make AI smarter
 * multiplayer improvements
   * Wesbowl
   * added scrolling and wrapping support for chat in lobby
   * shared vision option
   * made village placement fairer in random map generation
   * game setup improvements
   * random maps have now less forest
 * editor improvements:
   * added map resizing
   * added revert from disk functionality
   * selection of terrain is kep through undo and redo operations
   * preferences dialog
   * fixed name of the currently selected terrain not being displayed
   * fixed compile problems on some architectures
 * fixed 'show enemy moves' and 'best possible enemy moves' showing in context menu when no enemies visible
 * fixed resizing window in the title screen not working properly
 * fixed basic hotkeys not working in title screen
 * fixed terrain type and position problems with 800x600 resolution
 * fixed game creator not getting ally messages
 * fixed font redrawing for the font used in the slovak and polish translations
 * fixed typos in 'Shan Taum the Smug' that caused scenario to have only two turns
 * fixed crashes when units with invalid sides appear, by rejecting such invalide sides in the unit's constructor
 * fixed a bug with the validate_side(...) check in unit::unit(...). The symptom was failure of any scenario to load which has a 'move_unit_fake' command in it. The check is now bypassed for "dummy" units.
 * fixed bug where 'cancel' button would appear under multiplayer games
 * fixed preferences widgets disappearing when changing video mode
 * fixed tooltips from game setup appearing in-game
 * fixed hotkey not updating immidiately in the hotkeys dialog when changed
 * fixed assertion failure in playturn.cpp
 * made input of search strings and messages use a textbox that overlays the map, which allows these operations to be performed asynchronously
 * added caching of data files to speed game loading